# trajcast_dev

./: .gitignore  .pre-commit-config.yaml  .travis.yml  .whitesource  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yaml
examples/inference/: forecasting.ipynb
examples/training/: training.ipynb
tests/unit/: __init__.py
tests/unit/data/: test_atomic_graph.py  test_dataset.py  test_lammps.py  test_trajectory.py
tests/unit/data/data/: aspirin_energy.extxyz  (+7 more)
tests/unit/model/: test_forecast.py  test_losses.py  test_models.py  test_training.py  test_utils.py
tests/unit/nn/: test_encoding.py  test_message_passing.py  test_modules.py  test_non_linearity.py  test_normalization.py  test_tensor_cross_interactions.py  test_tensor_self_interactions.py
tests/unit/utils/: test_atomic_computes.py  test_misc.py
trajcast/: __init__.py
trajcast/cli/: convert_o3_backend.py
trajcast/data/: _keys.py  _types.py  atomic_graph.py  dataset.py  trajectory.py
trajcast/data/wrappers/: _lammps.py
trajcast/model/: checkpoint.py  forecast.py  losses.py  models.py  training.py  utils.py
trajcast/model/forecast_tools/: __init__.py  _momentum.py  _temperature.py  _thermostat.py  _units.py  _velocity.py
trajcast/nn/: _cutoff_functions.py  _encoding.py  _graph_module_irreps.py  _message_passing.py  _non_linearity.py  _normalization.py  _radial_basis.py  _tensor_cross_interactions.py  _tensor_self_interactions.py  _wrapper_ops.py  modules.py
trajcast/utils/: atomic_computes.py  misc.py
trajcast/validation/: physical_behaviour.py  trajectory_comparison.py
(+13 files in other folders)
